test/syc/bad/longshort.c
/*
 * Both long and short specifier
 */

long short a;
